--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samuraichikit/inc-ui-kit",
-  "private": true,
+  "private": false,
   "version": "0.1.0",
   "type": "module",
   "main": "dist/index.js",
