INC-167 fix: update types in package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@samuraichikit/inc-ui-kit",
   "private": false,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "types": "index.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "dist/style.css"
