--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@samuraichikit/inc-ui-kit",
   "private": false,
-  "version": "0.1.1",
+  "version": "0.1.2",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "dist/style.css"
+    "dist"
   ],
   "scripts": {
     "dev": "storybook dev -p 6006",
