--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@samuraichikit/inc-ui-kit",
   "private": false,
-  "version": "0.4.5",
+  "version": "0.5.5",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.5",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.2",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
