--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@samuraichikit/inc-ui-kit",
   "private": false,
-  "version": "0.8.7",
+  "version": "0.9.7",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -22,6 +22,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
