--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@samuraichikit/inc-ui-kit",
   "private": false,
-  "version": "0.9.8",
+  "version": "0.10.8",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.2.5",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
