--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "react-timeago": "^7.2.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "next": "^15.1.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3",
@@ -48,6 +50,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
+    "@types/react-timeago": "^4.1.7",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
