--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-timeago": "^7.2.0",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3",
